# End2End-Recommendation-Pipeline

./: .gitignore  Dockerfile  Makefile  README.md  api.py  app.py  azure-pipelines.yml  cloudbuild.yaml  make_prediction.sh  models.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  streamlit-deploy.yml
