[project]
name = "recommendation-system"
version = "0.1.0"
description = ""
authors = [
    {name = "Zain-Haider-ML",email = "hzain8206@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "scikit-surprise (>=1.1.4,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
